# scrum_poker

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  dioxus.toml.bak  docker-compose.yml  fly.toml  input.css
.cargo/: config.toml  config.toml.bak
assets/: sp.js
crates/common/: Cargo.toml
crates/common/src/: card.rs  dirs.rs  lib.rs  log.rs  rpc.rs  vote.rs
database/: Dockerfile  fly.toml
public/: style.css  tailwind.css
services/game-service/: Cargo.toml
services/game-service/example/: client.rs
services/game-service/src/: app.rs  dispatch.rs  main.rs  resources.rs  service.rs  vote.rs
src/: actions.rs  app.rs  card.rs  channel.rs  database.rs  db.rs  deck.rs  demo.rs  error.rs  estimate.rs  logs.rs  main.rs  name.rs  player.rs  room.rs  room_handler.rs  room_pool.rs  session.rs  state.rs  table.rs  urid.rs  username.rs  validate.rs
web/: Cargo.toml  Dockerfile
web/assets/: tailwind.css
web/database/: Dockerfile
web/src/: actions.rs  channel.rs  database.rs  deck.rs  error.rs  main.rs  name.rs  table.rs  username.rs
