[package]
name = "scrum_poker"
version = "0.1.0"
edition = "2021"
description = "A simple to use scrum poker game built in Rust."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.29"
axum = { version = "0.6.20", features = ["tokio", "ws"] }
axum_session = { version = "0.9.0", features = ["surrealdb-mem"] }
dioxus = "0.4.3"
dioxus-liveview = { version = "0.4.3", features = ["axum"] }
fermi = "0.4.3"
surrealdb = { version = "1.0.2", features = ["kv-mem"] }
deadpool = "0.10.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
tower-http = { version = "0.4.0", features = ["fs"] }
thiserror = "1.0.52"
uuid = "1.6.1"
nanoid = "0.4.0"
names = "0.14.0"
keyboard-types = "0.7"

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3
