[package]
name = "scrum_poker"
version = "0.2.0"
edition = "2021"
description = "A simple to use scrum poker game built in Rust."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35.0", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.29"
axum = { version = "0.7.5", features = ["tokio", "ws"] }
axum_session = { version = "0.13.0", features = ["surreal"] }
dioxus = "0.5.0"
dioxus-liveview = { version = "0.5.0", features = ["axum"] }
surrealdb = { version = "1.2.0" }
deadpool = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
thiserror = "1.0.52"
uuid = "1.6.1"
nanoid = "0.4.0"
names = "0.14.0"
keyboard-types = "0.7"
itertools = "0.12.1"
dotenvy = "0.15.7"
