[package]
name = "scrum_poker"
version = "0.2.0"
edition = "2021"
description = "A simple to use scrum poker game built in Rust."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35.0", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
axum = { version = "0.7.9", features = ["tokio", "ws", "macros"] }
axum_session = { version = "0.14.4" }
axum_session_surreal = { version = "0.2.1" }
dioxus = "0.6.0"
dioxus-liveview = { version = "0.6.0", features = ["axum"] }
surrealdb = { version = "2.1.3" }
deadpool = "0.12.1"
tower-http = { version = "0.6.2", features = ["fs"] }
thiserror = "2.0.7"
uuid = "1.11.0"
nanoid = "0.4.0"
names = "0.14.0"
keyboard-types = "0.7"
itertools = "0.13.0"
dotenvy = "0.15.7"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
